fix text area alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -182,8 +182,8 @@ main {
 
   // style form
   textarea {
-    vertical-align: top;
-    margin-top: 1.5rem;
+    display: block;
+    margin: 1.5rem auto;
   }
 
   input {
